--- a/_config.yml
+++ b/_config.yml
@@ -109,9 +109,9 @@ navigation_header:
 - title: Blog
   url: /blog/
 - title: Categories
-  url: /categories/
+  url: /categories.html
 - title: Search
-  url: /search/
+  url: /search.html
 
 navigation_footer:
 - title: Tien Nguyen
