--- a/_config.yml
+++ b/_config.yml
@@ -62,9 +62,9 @@ collections:
   posts:
     title: Posts # Needed for Siteleaf
     output: true
-    description: "Fly on the wings of mind" # The post list page content
+    # description: "Fly on the wings of mind" # The post list page content
     feature_text: |
-      Welcome to TienBku blog
+      Fly on the wings of mind
     feature_image: "https://picsum.photos/2560/600?image=866"
 
 # 6. Jekyll collections settings
@@ -114,7 +114,8 @@ social_links: # Appears in sidebar. Set the urls then uncomment and comment out 
   # Twitter: https://twitter.com/tientn
   # LinkedIn: https://www.linkedin.com/in/tientn
   GitHub: https://github.com/tienbku
-  link: https://github.com/tienbku
+  Facebook: https://www.facebook.com/truongtien.bku
+  # link: https://github.com/tienbku
   RSS: /feed.xml
 
 sharing_links: # Appear at the bottom of single blog posts, add as desired. The value can be 'true' or the desired button colour
